--- a/kitsunebi_default.conf
+++ b/kitsunebi_default.conf
@@ -116,6 +116,7 @@ DOMAIN-SUFFIX,t.co,PROXY
 // google
 DOMAIN-KEYWORD,google,PROXY
 DOMAIN-SUFFIX,ggpht.com,PROXY
+DOMAIN-SUFFIX,googleapis.cn,PROXY
 # DOMAIN-SUFFIX,google.com,PROXY
 # DOMAIN-SUFFIX,googleapis.com,PROXY
 # DOMAIN-SUFFIX,googleusercontent.com,PROXY
